fixed alignment for the discover content, and made the friends list its own component

--- a/client/src/pages/Discover/DiscoverPage.scss
+++ b/client/src/pages/Discover/DiscoverPage.scss
@@ -16,6 +16,7 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  justify-content: center;
 }
 
 .discover-search-sect {
